# sequence

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGES.md  CHANGES.rst  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.md  LICENSE.rst  MANIFEST.in  Makefile  README.md  README.rst  appveyor.yml  environment.yml  noxfile.py  pyproject.toml  requirements-dev.txt  requirements-develop.txt  requirements-doc.txt  requirements-docs.txt  requirements-notebook.txt  requirements-testing.in  requirements-testing.txt  requirements.py  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: black.yml  docs.yml  flake8.yml  lint.yml  notebooks.yml  prerelease.yml  release.yml  test.yml
ci/: requirements-py27.yml  requirements-py36.yml  requirements-py37.yml
data/: Default.yaml  marmara.yaml  sample_sea_level_file.txt  subsidence_marmara.csv  test.yaml  test_input_file.txt
data/marmara/: marmara.yaml  marmara_bathymetry.csv  marmara_subsidence.csv  sequence.yaml
docs/: Makefile  conf.py  environment.yml  index.md  index.rst  input-files.rst  installation.md  installation.rst  license.md  make.bat  modules.rst  notebooks.rst  plotting.rst  requirements.in  requirements.rst  sequence.rst  sequence.tests.rst  usage.rst
docs/_templates/: links.html  sidebarintro.html
docs/api/: index.rst
docs/cli/: input_files.md
docs/how_to_guides/: environments.md
docs/how_to_guides/install/: developer_install.md  index.md
docs/install/: developer_install.md  developer_install.rst  environments.md  environments.rst  index.md  index.rst
docs/notebooks/: index.md
docs/reference/api/: index.rst
docs/reference/cli/: commands.md  index.md  input_files.md  output_files.md  plotting.md
docs/tutorials/cli/: disable_process.md  index.md  quickstart.md  sealevel.md
docs/tutorials/notebooks/: example.ipynb  index.md  requirements.in
docs/user_guide/: index.md  index.rst  input_files.md  input_files.rst  output_files.md  output_files.rst  plotting.rst  usage.md  usage.rst
news/: 30.feature  30.misc  31.misc  32.misc  33.misc  34.bugfix  37.bugfix  39.bugfix  39.misc  40.bugfix  42.misc  45.feature  45.feature.1  45.misc  45.misc.1  46.bugfix  47.misc  48.misc  49.misc  50.feature  50.feature.1  50.feature.2  50.feature.3  51.bugfix  51.misc  51.notebook  52.misc  53.misc  54.feature  57.bugfix  58.docs  59.docs  60.misc  61.misc  62.feature  62.misc  64.bugfix  64.misc  65.docs  65.misc  (+19 more)
notebooks/: README.rst  example.ipynb  sequence.ipynb
paper/: paper.bib  paper.md
sequence/: __init__.py  _grid.py  _version.py  bathymetry.py  cli.py  coastal_plume.py  create_initial_profile.py  errors.py  fluvial.py  grid.py  input_reader.py  logging.py  netcdf.py  output_writer.py  plot.py  processes.py  raster_model.py  sea_level.py  sediment_flexure.py  sequence.py  sequence_model.py  shoreline.py  submarine.py  subsidence.py
sequence/tests/: test_bathymetry.py  test_shoreline.py
tests/: bathymetry_test.py  cli_test.py  compaction_test.py  config_files_test.py  flexure_test.py  grid_test.py  input_test.py  netcdf_test.py  output_writer_test.py  plot_test.py  sequence_model_test.py  sequence_test.py  shoreline_test.py  submarine_diffuser_test.py  subsidence_test.py  test_bathymetry.py  test_cli.py  test_config_files.py  test_flexure.py  test_grid.py  test_input.py  test_netcdf.py  test_output_writer.py  test_plot.py  test_sequence.py  test_sequence_model.py  test_submarine_diffuser.py  test_subsidence.py  test_time_varying_config.py  time_varying_config_test.py
tests/input_test/: sequence.yaml
tests/sequence_model_test/: marmara_sea_level.csv  marmara_subsidence.csv
tests/test_input/: sequence.toml  sequence.yaml
tests/test_sequence_model/: marmara.yaml  marmara_bathymetry.csv
tests/test_time_varying_config/: config-basic.yaml  config.toml
tests/time_varying_config_test/: config-basic.toml  config.yaml
