[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sequence-model"
description = "Python version of the Steckler Sequence model built with landlab"
authors = [
  {email = "mcflugen@gmail.com"},
  {name = "Eric Hutton"}
]
maintainers = [
  {email = "mcflugen@gmail.com"},
  {name = "Eric Hutton"}
]
keywords = ["sequence", "stratigraphy", "landlab"]
license = {file = "LICENSE.rst"}
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.8"
dependencies = [
  "compaction",
  "landlab",
  "netcdf4",
  "numpy >=1.22",
  "pyyaml",
  "rich-click",
  "scipy",
  "tomlkit",
  "tqdm",
]
dynamic = ["readme", "version"]

[project.urls]
homepage = "https://github.com/sequence-dev/sequence"
documentation = "https://sequence.readthedocs.io"
repository = "https://github.com/sequence-dev/sequence"
changelog = "https://github.com/sequence-dev/sequence/blob/develop/CHANGES.rst"

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "isort",
  "nbmake",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "pytest-datadir",
  "pytest-runner",
  "towncrier",
]
doc = [
  "pandoc",
  "nbformat",
  "jupyter_client",
  "ipython",
  "sphinx",
  "sphinx_rtd_theme",
  "tornado",
  "entrypoints",
  "nbsphinx>=0.2.12",
  "sphinxcontrib_github_alt",
  "pygments>=2.4",
  "sphinx-inline-tabs",
  "furo",
]
notebook = [
  "notebook",
  "tqdm",
]

[project.scripts]
sequence = "sequence.cli:sequence"
testy = "sequence.testy:app"

[tool.setuptools]
packages = ["sequence"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "AUTHORS.rst", "CHANGES.rst"]}
version = {attr = "sequence._version.__version__"}

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["notebooks", "sequence", "tests"]
norecursedirs = [".*", "*.egg*", "build", "dist", "examples"]
addopts = """
  --ignore setup.py
  --tb native
  --strict
  --durations 16
  --doctest-modules
  -vvv
"""
doctest_optionflags = [
  "NORMALIZE_WHITESPACE",
  "IGNORE_EXCEPTION_DETAIL",
  "ALLOW_UNICODE"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "notebook: marks tests as notebook (deselect with '-m \"not notebook\"')"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.towncrier]
directory = "news"
package = "sequence"
filename = "CHANGES.rst"
single_file = true
underlines = "-`^"
issue_format = "`#{issue} <https://github.com/sequence-dev/sequence/issues/{issue}>`_"
title_format = "{version} ({project_date})"

[[tool.towncrier.type]]
directory = "notebook"
name = "New Tutorial Notebooks"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "New Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "docs"
name = "Documentation Enhancements"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Other Changes and Additions"
showcontent = true
